--- a/zs.html
+++ b/zs.html
@@ -8,15 +8,15 @@
     <ul style="list-style-type: none;">
         <li class='list-group-item active'>活动：全国教育教学信息化交流展示活动</li>
 <li class='list-group-item'>主办单位：中央电化教育馆</li>
-<li class='list-group-item'>年份：<span style='font-weight: bold'>2016年度</span></li>
+<li class='list-group-item'>年份：<span style='font-weight: bold'>2019年度</span></li>
 <li class='list-group-item'>作者：王严</li>
-<li class='list-group-item'>所在单位：甘肃省通渭县襄南职业中学</li>
-<li class='list-group-item'>证书编号：<span style=='font-weight: bold'>920169905010379</span></li>
-<li class='list-group-item'>作品名称：<span style=='font-weight: bold'>黑白装饰画</span></li>
-<li class='list-group-item'>奖项：<span style=='font-weight: bold'>二等奖</span></li>
+<li class='list-group-item'>所在单位：甘肃省定西市通渭县职业中等专业学校</li>
+<li class='list-group-item'>证书编号：<span style=='font-weight: bold'>920169905050526</span></li>
+<li class='list-group-item'>作品名称：<span style=='font-weight: bold'>螺纹连接的预紧与防松</span></li>
+<li class='list-group-item'>奖项：<span style=='font-weight: bold'>三等奖</span></li>
 <li class='list-group-item'>证书二维码：<img src='http://www.mtsa1998.com.cn/cert/getqrcode.ashx?e=M&q=Two&s=8&c=920169905010379' width='150' /></li>
 <li class='list-group-item'>下载地址：<a href=Down.ashx?384a9e3709494d559d3bf651a7386546>点击下载</a></li>
-                            <li class='list-group-item'>根据中央电化教育馆发布的教电馆[2016]175号文件，此证书打印有效，可扫描二维码验证本证书真伪。</li>
+                            <li class='list-group-item'>根据中央电化教育馆发布的教电馆[2019]142号文件，此证书打印有效，可扫描二维码验证本证书真伪。</li>
     </ul>
 </body>
 </html>
