--- a/zs.html
+++ b/zs.html
@@ -14,7 +14,7 @@
 <li class='list-group-item'>证书编号：<span style=='font-weight: bold'>920169905050526</span></li>
 <li class='list-group-item'>作品名称：<span style=='font-weight: bold'>螺纹连接的预紧与防松</span></li>
 <li class='list-group-item'>奖项：<span style=='font-weight: bold'>三等奖</span></li>
-<li class='list-group-item'>证书二维码：<img src='http://www.mtsa1998.com.cn/cert/getqrcode.ashx?e=M&q=Two&s=8&c=920169905010379' width='150' /></li>
+<li class='list-group-item'>证书二维码：<img src='https://beethovenwong.github.io/www.mtsa1998.com.cn/zs.png' width='150' /></li>
 <li class='list-group-item'>下载地址：<a href=https://beethovenwong.github.io/www.mtsa1998.com.cn/zs.pdf>点击下载</a></li>
                             <li class='list-group-item'>根据中央电化教育馆发布的教电馆[2019]142号文件，此证书打印有效，可扫描二维码验证本证书真伪。</li>
     </ul>
